# agentic-core

./: README.md  agentic_info.json  pyproject.toml
src/agentic_core/: __init__.py  cli.py  plugin.py
src/agentic_core/commands/: __init__.py  check_environment.py  cleanup_manager.py  config.py  create_project.py  dependency_manager.py  discover_agentic.py  error_handler.py  feedback_cli.py  feedback_system.py  issues_command.py  rule_loader.py  security.py  setup.py  uv_manager.py  venv_manager.py
tests/: test_config.py  test_dependency_manager.py  test_feedback_system.py  test_security.py
