[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic_core"
version = "0.1.0"
description = "Command line tool framework that implements the 'ag' command and manages how it loads sub-tools"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Author Name", email = "author@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/agentic-framework/agentic-core"
"Bug Tracker" = "https://github.com/agentic-framework/agentic-core/issues"

[project.scripts]
ag = "agentic_core.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.isort]
known-first-party = ["agentic_core"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
